      preference of the \file{.win} variants.  This allows packages to
      provide content specific to UCRT/Rtools42 while supporting older
      versions of R via \file{.win} files.  Support for \file{.ucrt} file
      may be removed in the future once building packages from source on
      older versions of R would no longer be needed.

      \item R has experimental support for installation-time patching of
      packages. Patches may be installed from a given URL, local directory,
      or disabled. Patches are included into the installed packages for
      reference.

      \item Rtools42 include an original Msys2 build of GNU \command{tar}.
      Drive letters can be made to work by adding \option{--force-local} to
      environment variable \env{TAR_OPTIONS}. Rtools40 and earlier included
      a special version which used this option by default.

      \item \code{libcurl} is now required for installation.
    }
  }


  \subsection{INSTALLATION}{
    \itemize{
      \item Facilities for accessing \samp{ftp://} sites are no longer
      tested (except \emph{pro tem} for \code{curlGetHeaders()}) as modern
      browsers have removed support.
      %% Chrome and Firefox did in early 2021: Safari and Edge never had it.
    }
  }


  \subsection{PACKAGE INSTALLATION}{
    \itemize{
      \item \command{R CMD INSTALL} no longer tangles vignettes. This
      completes an \command{R CMD build} change in \R 3.0.0 and affects
      packages built before \R 3.0.2. Such packages should be re-made
      with \command{R CMD build} to have the tangled \R code of vignettes
      shipped with the tarball.

      \item \code{USE_FC_LEN_T} will become the default: this uses the
      correct prototypes for Fortran BLAS/LAPACK routines called from
      C/C++, and requires adjustment of most such calls -- see
      \dQuote{Writing R Extensions}.
      [Currently planned for early Nov: \acronym{CRAN} package authors
      have been notified.]
